# prop-it

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Anchor.toml  Cargo.toml  README.md  SECURITY.md  SOLANA-VULN-SCAN.md  TRIAGE.json  TRIAGE.md  VULN-FINDINGS.json  VULN-FINDINGS.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: next.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: MarketPanel.tsx  OracleStatus.tsx  ReceiptPanel.tsx  WalletButton.tsx  WalletProvider.tsx
app/src/lib/: tabula.ts
docs/: ADR.md  ARCHITECTURE.md  BUILD-ENVIRONMENT.md  DEPLOYMENT.md  PRD.md  RUNBOOK.md
keeper/: .env.example  Dockerfile  package.json  tsconfig.json
keeper/src/: config.ts  history.ts  index.ts  log.ts  merkle.ts  metrics.ts  oracle.ts  simulate.ts  tabulaClient.ts  txlineClient.ts  txlineFeed.ts
oracle/: Dockerfile  README.md  pyproject.toml
oracle/tabula_oracle/: __init__.py  server.py  tabfm_engine.py
oracle/tests/: test_engine.py  test_server.py
programs/tabula-markets/: Cargo.toml
programs/tabula-markets/src/: lib.rs
programs/txline-mock/: Cargo.toml
programs/txline-mock/src/: lib.rs
scripts/: dev-up.sh  install-oracle.sh
tests/: tabula-markets.ts
