[workspace]
resolver = "2"
members = [
    "programs/tabula-markets",
    "programs/txline-mock",
]

# Cargo.lock is pinned for Solana 1.18 / cargo-build-sbf (rustc 1.75).
# Keep lockfile version = 3. Prefer `cargo update -p <crate> --precise`
# over a full unlock when bumping deps.

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1


