[project]
name = "tabula-oracle"
version = "0.2.0"
description = "TabFM-driven probability oracle for TabulaMarkets prop-bet AMM"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115,<0.120",
    "uvicorn[standard]>=0.32,<0.35",
    "pydantic>=2.9,<3.0",
    "numpy>=2.0,<3.0",
    "pandas>=2.2,<3.0",
    "scikit-learn>=1.5,<2.0",
    "huggingface_hub>=0.24,<1.0",
    "structlog>=24.4,<26.0",
    "prometheus-client>=0.20,<1.0",
    # Torch pin. Users targeting GPU should install the CUDA wheel first,
    # matching this version (e.g. torch==2.4.1+cu121).
    "torch>=2.4,<3.0",
]

[project.optional-dependencies]
tabfm = [
    # Install the real Google Research TabFM model from GitHub. Pinned to
    # a commit for reproducibility (bump after review).
    "tabfm[pytorch] @ git+https://github.com/google-research/tabfm.git@main",
]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-cov>=5.0,<7.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
]

[project.scripts]
tabula-oracle = "tabula_oracle.server:_run_uvicorn"

[tool.setuptools]
packages = ["tabula_oracle"]

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
