[package]
name = "txline-mock"
version = "0.1.0"
description = "Local mock of the TxLINE on-chain program (validate_stat via Merkle proof)"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "txline_mock"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
